--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
 }
 body{
   min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   align-items: flex-start;
 }
@@ -34,6 +35,7 @@ main img{
 }
 aside{
   width: min(450px, 100%);
+  min-height: 100dvh;
   height: 100vh;
   position: sticky;
   top: 0;
